advent4_2025 solution Part2

--- a/advent4_2025.ipynb
+++ b/advent4_2025.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "id": "7f88b6c9",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
     "@.@@@.@@@@\n",
     ".@@@@@@@@.\n",
     "@.@.@@@.@.\"\"\"\n",
-    "dataEx = \"\"\".@.@@@@@@.@@.@@@..@@.@@.@@@@.@@@@@@..@.@@@..@.@.@@@@@@..@@@@@@@.@..@.@..@@@@...@.@@@@@@.@.@@@..@@.@@..@@.@.@@....@@@@.@@@.@.@@.@@..@..@\n",
+    "dataTest = \"\"\".@.@@@@@@.@@.@@@..@@.@@.@@@@.@@@@@@..@.@@@..@.@.@@@@@@..@@@@@@@.@..@.@..@@@@...@.@@@@@@.@.@@@..@@.@@..@@.@.@@....@@@@.@@@.@.@@.@@..@..@\n",
     ".@@...@@@..@@@...@.@.@..@..@.@@@..@.@@@@@@..@.@@..@@@.@@@@..@@@.@@@@@@@.@@@.@.@@@.@@@@.@@@@.@...@.@.@@@.@..@@.@.@@@@.@@@@@@@..@...@@@.@\n",
     "@@@@@.@@@@.@@@..@.@@@.@@@@.@..@@@@@.@@@@.@@..@@@@@@@@@@@@..@...@.@@@@@@@@@.@@.@...@@..@@@@@@.@.@@@@@.@..@@@.@@@@.@@@@@@.....@.@@@@@@..@\n",
     ".@@@..@.@.@@.@@@@@..@@@@@@.@.@.@.@.@@@@@..@..@..@..@@@.@@@@@@@@.@.@@.@@@.@@@@.@..@@.@.@@.@@..@.@@.@.@...@@.@@@@..@.@@@@@@@@.@@@@@.@@@@@\n",
@@ -168,9 +168,9 @@
     "@@@@@..@@@..@.@@@.@.....@@@.@@..@@@.@@@@.@@@..@.@.@.@@@@@.@@@@@@@@.....@@@@@@.@@.@@@@@...@@@@@@@@@@.@@@.@..@@@@@@@@@@@.@@@@@@.@@@@.@@.@\n",
     "@@@..@@.@@@@@.@@@@@@@.@.@@@@@@@...@@@@.@@@.@..@@@.@@..@@@@@@.@.@@@@...@@@.@@.@.@@@@@.@@.@.@.@.@@@@..@@...@..@@@..@...@.@..@@@@.@@..@.@.\n",
     ".@@@@...@.@..@@.@...@..@@@@@@.@..@..@.@@@@@.@@@..@@@.@@.@..@@@@@.@@..@.@.@.@@@@@@.@.@.@...@.@@@.@.@@@@@.@@@@@@@.@@@.@.@..@@@@@@@.@.@.@@\"\"\"\n",
-    "matrixEx = [[str(c) for c in line] for line in dataEx.splitlines()]\n",
-    "print(matrixEx)\n",
-    "resultMat = matrixEx"
+    "matrixTest = [[str(c) for c in line] for line in dataTest.splitlines()]\n",
+    "print(matrixTest)\n",
+    "resultMat = matrixTest"
    ]
   },
   {
@@ -234,19 +234,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "01757654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processMatrix(InMat):\n",
+    "    num_rows = len(InMat)\n",
+    "    num_cols = len(InMat[0])\n",
+    "    goodPaperRolls = 0\n",
+    "    #outMat = InMat # important for python learning... This is a reference to InMat\n",
+    "    outMat = [row[:] for row in InMat] # right way of copying the matrix\n",
+    "\n",
+    "    for r, row in enumerate(InMat):\n",
+    "        for c, val in enumerate(row):\n",
+    "            if val!='.':\n",
+    "                if r == 0:\n",
+    "                    possibleRows = [r, r+1]\n",
+    "                elif r == (num_rows-1):\n",
+    "                    possibleRows = [r-1, r]\n",
+    "                else:\n",
+    "                    possibleRows = [r-1, r,  r+1]\n",
+    "\n",
+    "\n",
+    "                if c == 0:\n",
+    "                    possibleColumns = [c, c+1]\n",
+    "                elif c == (num_cols-1):\n",
+    "                    possibleColumns = [c-1, c]\n",
+    "                else:\n",
+    "                    possibleColumns = [c-1, c,  c+1]\n",
+    "\n",
+    "                selected = []\n",
+    "                currentLocation = [r, c]\n",
+    "                for rx in possibleRows:\n",
+    "                    for cx in possibleColumns:\n",
+    "                        if [rx,cx] != currentLocation:\n",
+    "                            selected.append(InMat[rx][cx])\n",
+    "\n",
+    "                count = selected.count(\"@\")\n",
+    "                if count<4:\n",
+    "                    goodPaperRolls +=1\n",
+    "                    outMat[r][c] = \"x\"\n",
+    "                else:\n",
+    "                    outMat[r][c] = val\n",
+    "\n",
+    "    return goodPaperRolls, outMat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bf10546e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@\n"
+      "13\n",
+      ". . x x . x x @ x .\n",
+      "x @ @ . @ . @ . @ @\n",
+      "@ @ @ @ @ . x . @ @\n",
+      "@ . @ @ @ @ . . @ .\n",
+      "x @ . @ @ @ @ . @ x\n",
+      ". @ @ @ @ @ @ @ . @\n",
+      ". @ . @ . @ . @ @ @\n",
+      "x . @ @ @ . @ @ @ @\n",
+      ". @ @ @ @ @ @ @ @ .\n",
+      "x . x . @ @ @ . x .\n",
+      "25\n",
+      ". . x x . x x x x .\n",
+      "x @ @ . x . x . @ x\n",
+      "x @ @ @ @ . x . @ @\n",
+      "x . @ @ @ @ . . x .\n",
+      "x @ . @ @ @ @ . x x\n",
+      ". x @ @ @ @ @ @ . x\n",
+      ". x . @ . @ . @ @ @\n",
+      "x . @ @ @ . @ @ @ @\n",
+      ". x @ @ @ @ @ @ @ .\n",
+      "x . x . @ @ @ . x .\n",
+      "32\n",
+      ". . x x . x x x x .\n",
+      "x x @ . x . x . x x\n",
+      "x @ @ @ @ . x . x x\n",
+      "x . @ @ @ @ . . x .\n",
+      "x x . @ @ @ @ . x x\n",
+      ". x @ @ @ @ @ @ . x\n",
+      ". x . @ . @ . @ @ x\n",
+      "x . @ @ @ . @ @ @ @\n",
+      ". x x @ @ @ @ @ @ .\n",
+      "x . x . @ @ @ . x .\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "dataEx = \"\"\"..@@.@@@@.\n",
+    "@@@.@.@.@@\n",
+    "@@@@@.@.@@\n",
+    "@.@@@@..@.\n",
+    "@@.@@@@.@@\n",
+    ".@@@@@@@.@\n",
+    ".@.@.@.@@@\n",
+    "@.@@@.@@@@\n",
+    ".@@@@@@@@.\n",
+    "@.@.@@@.@.\"\"\"\n",
+    "matrixEx = [[str(c) for c in line] for line in dataEx.splitlines()]\n",
+    "goodCounts, resultMat =  processMatrix(matrixEx)\n",
+    "print(goodCounts)\n",
+    "for row in resultMat:\n",
+    "    print(\" \".join(row))\n",
+    "\n",
+    "goodCounts1, resultMat1 =  processMatrix(resultMat)\n",
+    "print(goodCounts1)\n",
+    "for row in resultMat1:\n",
+    "    print(\" \".join(row))\n",
+    "\n",
+    "goodCounts2, resultMat2 =  processMatrix(resultMat1)\n",
+    "print(goodCounts2)\n",
+    "for row in resultMat2:\n",
+    "    print(\" \".join(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "50238d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2394\n",
+      "3233\n",
+      "3906\n",
+      "4479\n",
+      "4945\n",
+      "5345\n",
+      "5695\n",
+      "6013\n",
+      "6269\n",
+      "6490\n",
+      "6692\n",
+      "6869\n",
+      "7026\n",
+      "7166\n",
+      "7285\n",
+      "7399\n",
+      "7495\n",
+      "7572\n",
+      "7648\n",
+      "7718\n",
+      "7769\n",
+      "7810\n",
+      "7847\n",
+      "7884\n",
+      "7912\n",
+      "7933\n",
+      "7951\n",
+      "7965\n",
+      "7979\n",
+      "7997\n",
+      "8016\n",
+      "8031\n",
+      "8039\n",
+      "8046\n",
+      "8053\n",
+      "8062\n",
+      "8069\n",
+      "8077\n",
+      "8084\n",
+      "8089\n",
+      "8093\n",
+      "8097\n",
+      "8103\n",
+      "8108\n",
+      "8112\n",
+      "8115\n",
+      "8118\n",
+      "8121\n",
+      "8125\n",
+      "8131\n",
+      "8137\n",
+      "8142\n",
+      "8147\n",
+      "8154\n",
+      "8159\n",
+      "8164\n",
+      "8169\n",
+      "8173\n",
+      "8175\n",
+      "8179\n",
+      "8182\n",
+      "8183\n",
+      "8184\n",
+      "8184\n"
+     ]
+    }
+   ],
+   "source": [
+    "xMat = [row[:] for row in matrixTest] # right way of copying the matrix\n",
+    "inCounts, xMat =  processMatrix(xMat)\n",
+    "cntFlag = 1\n",
+    "while cntFlag == 1:\n",
+    "    goodCounts1, xMat =  processMatrix(xMat)\n",
+    "    print(goodCounts1)\n",
+    "    # for row in xMat:\n",
+    "    #     print(\" \".join(row))\n",
+    "\n",
+    "    if goodCounts1 == inCounts:\n",
+    "        cntFlag = 0\n",
+    "    inCounts = goodCounts1\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
