solution to day5 part2. Very tricky because of memory overloading

--- a/advent5_2025.ipynb
+++ b/advent5_2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "26c67d8e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,41 @@
     "                freshElements.append(i)\n",
     "                print(f\"val = {i} in [{s}, {e}]\")\n",
     "                break\n",
-    "    return countFresh, freshElements"
+    "    return countFresh, freshElements\n",
+    "\n",
+    "### for part 2. Does not work with large datasets....\n",
+    "def checkUniqueFresh(rangeFreshstarts, rangeFreshends):\n",
+    "    allElements = []\n",
+    "    for si, ei in zip(rangeFreshstarts, rangeFreshends):\n",
+    "        for i in range(si,ei+1):\n",
+    "            allElements.append(i)\n",
+    "    UniqueFreshIDs = set(allElements)\n",
+    "    return UniqueFreshIDs\n",
+    "\n",
+    "def count_unique_from_ranges(starts, ends):\n",
+    "    # Pair and sort intervals\n",
+    "    intervals = sorted(zip(starts, ends))\n",
+    "\n",
+    "    merged = []\n",
+    "    cur_start, cur_end = intervals[0]\n",
+    "\n",
+    "    for s, e in intervals[1:]:\n",
+    "        if s <= cur_end + 1:\n",
+    "            # Overlapping or touching → merge\n",
+    "            cur_end = max(cur_end, e)\n",
+    "        else:\n",
+    "            # Disjoint → push previous interval\n",
+    "            merged.append((cur_start, cur_end))\n",
+    "            cur_start, cur_end = s, e\n",
+    "\n",
+    "    merged.append((cur_start, cur_end))\n",
+    "\n",
+    "    # Now compute total unique count\n",
+    "    total = 0\n",
+    "    for s, e in merged:\n",
+    "        total += (e - s + 1)\n",
+    "\n",
+    "    return total, merged"
    ]
   },
   {
@@ -57,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "883e5900",
    "metadata": {},
    "outputs": [
@@ -810,6 +844,59 @@
     "cnt, elements=checkAvFresh(RXintS, RXintE, AVint)\n",
     "print(cnt)\n",
     "print(elements)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c1e0ed2",
+   "metadata": {},
+   "source": [
+    "# for the example set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fff3ce66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 5, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20}\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "rgList, avList = load_and_split('day5_ex.txt')\n",
+    "RXintS, RXintE = rgList2ints(rgList)\n",
+    "UnFrshIDs = checkUniqueFresh(RXintS, RXintE)\n",
+    "print(UnFrshIDs)\n",
+    "print(len(UnFrshIDs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d82e54b",
+   "metadata": {},
+   "source": [
+    "## For the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0afbf84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rgListT, avListT = load_and_split('day5_test.txt')\n",
+    "RXintST, RXintET = rgList2ints(rgListT)\n",
+    "UnFrshIDsT = checkUniqueFresh(RXintST, RXintET)\n",
+    "#print(UnFrshIDsT)\n",
+    "print(len(UnFrshIDsT))"
    ]
   }
  ],
