commented the function of solution for part 2, day 5

--- a/advent5_2025.ipynb
+++ b/advent5_2025.ipynb
@@ -55,16 +55,17 @@
     "    UniqueFreshIDs = set(allElements)\n",
     "    return UniqueFreshIDs\n",
     "\n",
+    "# we must not enumerate the elements of the intervals. \n",
     "def count_unique_from_ranges(starts, ends):\n",
     "    # Pair and sort intervals\n",
-    "    intervals = sorted(zip(starts, ends))\n",
+    "    intervals = sorted(zip(starts, ends)) # sorts intervals by start value\n",
     "\n",
-    "    merged = []\n",
-    "    cur_start, cur_end = intervals[0]\n",
+    "    merged = [] # to be filled with merged, non-overlapping intervals.\n",
+    "    cur_start, cur_end = intervals[0] # take the first start and end (remember, these are sorted)....\n",
     "\n",
     "    for s, e in intervals[1:]:\n",
     "        if s <= cur_end + 1:\n",
-    "            # Overlapping or touching → merge\n",
+    "            # Overlapping or touching → merge. Extends the current interval.\n",
     "            cur_end = max(cur_end, e)\n",
     "        else:\n",
     "            # Disjoint → push previous interval\n",
@@ -73,7 +74,7 @@
     "\n",
     "    merged.append((cur_start, cur_end))\n",
     "\n",
-    "    # Now compute total unique count\n",
+    "    # Now compute total unique count. Only adds up the lengths of the merged intervals\n",
     "    total = 0\n",
     "    for s, e in merged:\n",
     "        total += (e - s + 1)\n",
@@ -887,16 +888,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d0afbf84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "352807801032167\n"
+     ]
+    }
+   ],
    "source": [
     "rgListT, avListT = load_and_split('day5_test.txt')\n",
     "RXintST, RXintET = rgList2ints(rgListT)\n",
-    "UnFrshIDsT = checkUniqueFresh(RXintST, RXintET)\n",
-    "#print(UnFrshIDsT)\n",
-    "print(len(UnFrshIDsT))"
+    "UnFrshIDsT, merged = count_unique_from_ranges(RXintST, RXintET)\n",
+    "print(UnFrshIDsT)\n"
    ]
   }
  ],
