--- a/advent7_2025.ipynb
+++ b/advent7_2025.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "d38c34ad",
    "metadata": {},
    "outputs": [
@@ -1883,34 +1883,34 @@
     }
    ],
    "source": [
-    "def findIdx(s, ch):\n",
+    "def findIdx(s, ch): # This function returns all the occurences of a pattern on a line. Returns a list.\n",
     "    return [i for i, ltr in enumerate(s) if ltr == ch]\n",
     "\n",
     "with open(\"day7_test.txt\",'r') as f:\n",
-    "    data = f.readlines()\n",
+    "    data = f.readlines() # load the input file as a list of lines of strings\n",
     "\n",
     "print(data)\n",
     "\n",
     "beamIndex = findIdx(data[0],\"S\")  # initial location for the beam\n",
-    "countStuff = 0\n",
+    "countStuff = 0                    # start the count for the beam deviations\n",
     "\n",
-    "for di in range(1,len(data)):\n",
+    "for di in range(1,len(data)): # for each line of the input, starting from the second, and leaving the last one out (since only dots.)\n",
     "\n",
-    "    beamLocs = findIdx(data[di],\"^\")\n",
-    "    common_items_set = set(beamIndex) & set(beamLocs)\n",
+    "    beamLocs = findIdx(data[di],\"^\") # find Beam deviators\n",
+    "    common_items_set = set(beamIndex) & set(beamLocs) # compare the location of beam deviators in present line with the currelnt beams\n",
     "\n",
     "    print(f\"Line {di}: {data[di]} has {beamLocs}. Current locations are {beamIndex}\")\n",
-    "    if not common_items_set:\n",
+    "    if not common_items_set: # if there are no beam deviators, just keep them as they are \n",
     "        print(\"No beam thing\")\n",
     "    else:\n",
-    "        countStuff += len(common_items_set)\n",
+    "        countStuff += len(common_items_set) # if there exist beam deviators, add one to the count.\n",
     "\n",
-    "        for li in common_items_set: \n",
+    "        for li in common_items_set:  #for each beam deviator that interacts with the current beams. Remove the current, add the one before and after.\n",
     "            print(f\"common val {li}\")\n",
     "            beamIndex.remove(li)\n",
     "            beamIndex.append(li-1)\n",
     "            beamIndex.append(li+1)\n",
-    "    beamIndex = list(set(beamIndex))\n",
+    "    beamIndex = list(set(beamIndex)) # there are some deviators that produce the same beam twice. This line removes those.\n",
     "   \n",
     "print(countStuff)\n"
    ]
