Tried to solve the second part of the day using recursive functions and failed miserably. Ended up using counters and worked faster and better. The recursive solution still looked kinda good, tho

--- a/advent6_2025.ipynb
+++ b/advent6_2025.ipynb
@@ -5225,7 +5225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 89,
    "id": "c1cb08da",
    "metadata": {},
    "outputs": [
@@ -5233,54 +5233,141 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12205519048710\n"
+      "10507242072010\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "from math import prod\n",
+    "from math import prod  # make sure you have this\n",
     "\n",
     "with open(\"day6test.txt\") as f:\n",
     "    lines = [line.rstrip(\"\\n\") for line in f]\n",
     "\n",
-    "# 1. Find column spans\n",
+    "# Find spans of non-space characters in the first non-empty line\n",
     "first = next(line for line in lines if line.strip())\n",
     "spans = [m.span() for m in re.finditer(r'\\S+', first)]\n",
     "\n",
-    "# 2. Extract columns (skip last line because it's symbols)\n",
+    "# Extract columns (each span = one problem block)\n",
     "columns = [\n",
     "    [line[start:end] for line in lines[:-1]]\n",
     "    for (start, end) in spans\n",
     "]\n",
     "\n",
-    "# 3. Extract symbols from the last line\n",
-    "symbol_line = lines[-1]\n",
-    "symbols = [symbol_line[start:end].strip() for (start, end) in spans]\n",
+    "# Your helper that gives you one string per problem; last char is the symbol\n",
+    "cols2flip = loadSetday6('day6test.txt')\n",
     "\n",
-    "total = 0\n",
+    "symbols2use = [sy[-1] for sy in cols2flip]\n",
     "\n",
-    "# 4. Process each problem\n",
-    "for col, sym in zip(columns, symbols):\n",
+    "numOps = len(symbols2use)\n",
     "\n",
-    "    # Flip column into rows (vertical → horizontal)\n",
-    "    max_len = max(len(x) for x in col)\n",
+    "sumOfStuff = 0\n",
     "\n",
-    "    rows = [\n",
-    "        \"\".join(s[i] if i < len(s) else \" \" for s in col).strip()\n",
-    "        for i in range(max_len)\n",
+    "for xi in range(numOps):\n",
+    "    aaa = columns[xi]          # list of rows (strings) for this problem\n",
+    "    currSym = symbols2use[xi]\n",
+    "\n",
+    "    max_len2 = max(len(x) for x in aaa)\n",
+    "\n",
+    "    # a[i] = list of chars in column i (top→bottom)\n",
+    "    a = [\n",
+    "        [s[i] if i < len(s) else ' ' for s in aaa]\n",
+    "        for i in range(max_len2)\n",
     "    ]\n",
     "\n",
-    "    # Convert to integers\n",
-    "    nums = [int(r) for r in rows if r]\n",
+    "    # Part 2: read columns right-to-left, build numbers, skip empty ones\n",
+    "    anum = []\n",
+    "    for col in reversed(a):\n",
+    "        s = \"\".join(col).strip()\n",
+    "        if s:\n",
+    "            anum.append(int(s))\n",
     "\n",
-    "    # Apply operation\n",
-    "    if sym == '+':\n",
-    "        total += sum(nums)\n",
-    "    else:\n",
-    "        total += prod(nums)\n",
+    "    if currSym == '+':\n",
+    "        sumOfStuff += sum(anum)\n",
+    "    elif currSym == '*':\n",
+    "        sumOfStuff += prod(anum)\n",
     "\n",
-    "print(total)"
+    "print(sumOfStuff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "abe93222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11044319475191\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import prod\n",
+    "\n",
+    "def solve_part2(filename):\n",
+    "    with open(filename) as f:\n",
+    "        lines = [line.rstrip(\"\\n\") for line in f]\n",
+    "\n",
+    "    # Separate number rows and operator row\n",
+    "    number_lines = lines[:-1]\n",
+    "    symbol_line  = lines[-1]\n",
+    "\n",
+    "    height = len(number_lines)\n",
+    "    width  = max(len(line) for line in lines)\n",
+    "\n",
+    "    # Pad all lines to same width\n",
+    "    number_lines = [line.ljust(width) for line in number_lines]\n",
+    "    symbol_line  = symbol_line.ljust(width)\n",
+    "\n",
+    "    # A column is a separator if it's all spaces (numbers + symbol row)\n",
+    "    is_sep = [\n",
+    "        all(number_lines[r][c] == ' ' and symbol_line[c] == ' '\n",
+    "            for r in range(height))\n",
+    "        for c in range(width)\n",
+    "    ]\n",
+    "\n",
+    "    # Group consecutive non-separator columns into problem blocks\n",
+    "    blocks = []\n",
+    "    in_block = False\n",
+    "    start = 0\n",
+    "    for c in range(width):\n",
+    "        if not is_sep[c] and not in_block:\n",
+    "            in_block = True\n",
+    "            start = c\n",
+    "        elif is_sep[c] and in_block:\n",
+    "            in_block = False\n",
+    "            blocks.append((start, c))\n",
+    "    if in_block:\n",
+    "        blocks.append((start, width))\n",
+    "\n",
+    "    total = 0\n",
+    "\n",
+    "    for start, end in blocks:\n",
+    "        # Operator: any non-space in symbol_line within this block\n",
+    "        op = next(ch for ch in symbol_line[start:end] if ch.strip())\n",
+    "\n",
+    "        nums = []\n",
+    "\n",
+    "        # Each column in [start, end) is a number, read right-to-left\n",
+    "        for c in range(end - 1, start - 1, -1):\n",
+    "            digits = ''.join(number_lines[r][c] for r in range(height))\n",
+    "            digits = digits.strip()\n",
+    "            if digits:\n",
+    "                nums.append(int(digits))\n",
+    "\n",
+    "        if op == '+':\n",
+    "            total += sum(nums)\n",
+    "        else:\n",
+    "            total += prod(nums)\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "\n",
+    "# Example:\n",
+    "print(solve_part2(\"day6test.txt\"))\n"
    ]
   }
  ],
