Tried to solve the second part of the day using recursive functions and failed miserably. Ended up using counters and worked faster and better. The recursive solution still looked kinda good, tho

--- a/advent7_2025.ipynb
+++ b/advent7_2025.ipynb
@@ -219,6 +219,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e31c0f3",
+   "metadata": {},
+   "source": [
+    "# Part 2 actually working. Avoid use of recursion here. It complicates things massively"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "e4ff5a5e",
