Checked Daniels Solution

--- a/advent9_theater.ipynb
+++ b/advent9_theater.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "eee16fd3",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,239 @@
     "    inputLocs.append([startx, endx])\n",
     "\n",
     "#print(inputLocs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfc17693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "data = np.loadtxt('day9_ex.txt', delimiter=',')\n",
+    "col0 = data[:, 0].astype(int)\n",
+    "col1 = data[:, 1].astype(int)\n",
+    "\n",
+    "points = np.column_stack((col0, col1))\n",
+    "max_r = points[:,0].max() + 1\n",
+    "max_c = points[:,1].max() + 1\n",
+    "\n",
+    "D = np.zeros((max_r, max_c), dtype=np.uint8)\n",
+    "\n",
+    "for i in range(len(points)):\n",
+    "    r1, c1 = points[i]\n",
+    "    r2, c2 = points[(i+1) % len(points)]\n",
+    "\n",
+    "    # vertical edge\n",
+    "    if c1 == c2:\n",
+    "        rmin, rmax = sorted([r1, r2])\n",
+    "        D[rmin:rmax+1, c1] = 1\n",
+    "\n",
+    "    # horizontal edge\n",
+    "    elif r1 == r2:\n",
+    "        cmin, cmax = sorted([c1, c2])\n",
+    "        D[r1, cmin:cmax+1] = 1\n",
+    "\n",
+    "    # no diagonal edges in your example\n",
+    "for r in range(D.shape[0]):\n",
+    "    cols = np.where(D[r] == 1)[0]\n",
+    "    if len(cols) < 2:\n",
+    "        continue\n",
+    "\n",
+    "    # fill between every pair of crossings\n",
+    "    for i in range(0, len(cols)-1, 2):\n",
+    "        c_start = cols[i]\n",
+    "        c_end   = cols[i+1]\n",
+    "        D[r, c_start:c_end+1] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c5baa88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# points = np.array([\n",
+    "#     [7,1],\n",
+    "#     [11,1],\n",
+    "#     [11,7],\n",
+    "#     [9,7],\n",
+    "#     [9,5],\n",
+    "#     [2,5],\n",
+    "#     [2,3],\n",
+    "#     [7,3]\n",
+    "# ])\n",
+    "\n",
+    "N = len(points)\n",
+    "best_score = np.zeros(N, dtype=int)\n",
+    "\n",
+    "for i in range(N):\n",
+    "    r1, c1 = points[i]\n",
+    "\n",
+    "    for j in range(i+1, N):\n",
+    "        r2, c2 = points[j]\n",
+    "\n",
+    "        # Must differ in both row and column\n",
+    "        if r1 == r2 or c1 == c2:\n",
+    "            continue\n",
+    "\n",
+    "        # Bounding box\n",
+    "        rmin, rmax = sorted([r1, r2])\n",
+    "        cmin, cmax = sorted([c1, c2])\n",
+    "\n",
+    "        rect = D[rmin:rmax+1, cmin:cmax+1]\n",
+    "\n",
+    "        # Skip if any zero inside\n",
+    "        if np.any(rect == 0):\n",
+    "            continue\n",
+    "\n",
+    "        # Score = number of 1s inside\n",
+    "        score = np.sum(rect)\n",
+    "\n",
+    "        # Update best score for both points\n",
+    "        if score > best_score[i]:\n",
+    "            best_score[i] = score\n",
+    "        if score > best_score[j]:\n",
+    "            best_score[j] = score\n",
+    "\n",
+    "print(max(best_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2d675102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 2 1 2 0 0]\n",
+      " [0 0 0 1 1 1 0 0]\n",
+      " [0 0 0 1 1 1 0 0]\n",
+      " [0 0 0 1 1 1 0 0]\n",
+      " [0 0 0 1 1 1 0 0]\n",
+      " [0 2 1 1 1 1 0 0]\n",
+      " [0 1 1 1 1 1 0 0]\n",
+      " [0 1 1 1 1 1 1 2]\n",
+      " [0 1 1 1 1 1 1 1]\n",
+      " [0 2 1 1 1 1 1 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "data = np.loadtxt('day9_ex.txt',delimiter=',')\n",
+    "col0 = data[:, 0].astype(int)\n",
+    "col1 = data[:, 1].astype(int)\n",
+    "#print(col0)\n",
+    "#print(col1)\n",
+    "\n",
+    "# print(np.max(col0))\n",
+    "# print(np.max(col1))\n",
+    "\n",
+    "# print(np.min(col0))\n",
+    "# print(np.min(col1))\n",
+    "\n",
+    "D = np.zeros((int(np.max(col0))+1, int(np.max(col1))+1),dtype=np.int8)\n",
+    "D[col0,col1] = 2\n",
+    "\n",
+    "# --- Fill between 2s (rows) ---\n",
+    "for r in range(D.shape[0]):\n",
+    "    cols = np.where(D[r] == 2)[0]\n",
+    "    if len(cols) >= 2:\n",
+    "        D[r, cols[0]:cols[-1]+1] = 1\n",
+    "        D[r, cols] = 2\n",
+    "\n",
+    "# --- Fill between 2s (columns) ---\n",
+    "for c in range(D.shape[1]):\n",
+    "    rows = np.where(D[:, c] == 2)[0]\n",
+    "    if len(rows) >= 2:\n",
+    "        D[rows[0]:rows[-1]+1, c] = 1\n",
+    "        D[rows, c] = 2\n",
+    "\n",
+    "# --- Fill between 1s (rows) ---\n",
+    "for r in range(D.shape[0]):\n",
+    "    cols = np.where(D[r] == 1)[0]\n",
+    "    if len(cols) >= 2:\n",
+    "        D[r, cols[0]:cols[-1]+1] = 1\n",
+    "\n",
+    "# --- Fill between 1s (columns) ---\n",
+    "for c in range(D.shape[1]):\n",
+    "    rows = np.where(D[:, c] == 1)[0]\n",
+    "    if len(rows) >= 2:\n",
+    "        D[rows[0]:rows[-1]+1, c] = 1\n",
+    "\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "82c05b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  0  9  0 11  0  0 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "points = np.column_stack((col0, col1))\n",
+    "num_points = len(points)\n",
+    "\n",
+    "best_score = np.zeros(num_points, dtype=int)\n",
+    "\n",
+    "for i in range(num_points):\n",
+    "    r1, c1 = points[i]\n",
+    "\n",
+    "    for j in range(i+1, num_points):\n",
+    "        r2, c2 = points[j]\n",
+    "\n",
+    "        # Check square condition\n",
+    "        if abs(r1 - r2) != abs(c1 - c2):\n",
+    "            continue\n",
+    "\n",
+    "        # Bounding box\n",
+    "        rmin, rmax = sorted([r1, r2])\n",
+    "        cmin, cmax = sorted([c1, c2])\n",
+    "\n",
+    "        square = D[rmin:rmax+1, cmin:cmax+1]\n",
+    "\n",
+    "        # Skip if any zero\n",
+    "        if np.any(square == 0):\n",
+    "            continue\n",
+    "\n",
+    "        # Score = ones inside + 2 for the corners\n",
+    "        ones_inside = np.sum(square == 1)\n",
+    "        score = ones_inside + 2\n",
+    "\n",
+    "        # Update best score for both points\n",
+    "        if score > best_score[i]:\n",
+    "            best_score[i] = score\n",
+    "        if score > best_score[j]:\n",
+    "            best_score[j] = score\n",
+    "\n",
+    "print(best_score)"
    ]
   },
   {
