Solution for day 11 part1. One step closergit add .!

--- a/advent9_theater.ipynb
+++ b/advent9_theater.ipynb
@@ -28,6 +28,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73302127",
+   "metadata": {},
+   "source": [
+    "Costly solution for part2. Does not work with test data...."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dfc17693",
@@ -89,16 +97,6 @@
     }
    ],
    "source": [
-    "# points = np.array([\n",
-    "#     [7,1],\n",
-    "#     [11,1],\n",
-    "#     [11,7],\n",
-    "#     [9,7],\n",
-    "#     [9,5],\n",
-    "#     [2,5],\n",
-    "#     [2,3],\n",
-    "#     [7,3]\n",
-    "# ])\n",
     "\n",
     "N = len(points)\n",
     "best_score = np.zeros(N, dtype=int)\n",
@@ -133,131 +131,6 @@
     "            best_score[j] = score\n",
     "\n",
     "print(max(best_score))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "2d675102",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 2 1 2 0 0]\n",
-      " [0 0 0 1 1 1 0 0]\n",
-      " [0 0 0 1 1 1 0 0]\n",
-      " [0 0 0 1 1 1 0 0]\n",
-      " [0 0 0 1 1 1 0 0]\n",
-      " [0 2 1 1 1 1 0 0]\n",
-      " [0 1 1 1 1 1 0 0]\n",
-      " [0 1 1 1 1 1 1 2]\n",
-      " [0 1 1 1 1 1 1 1]\n",
-      " [0 2 1 1 1 1 1 2]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import math\n",
-    "data = np.loadtxt('day9_ex.txt',delimiter=',')\n",
-    "col0 = data[:, 0].astype(int)\n",
-    "col1 = data[:, 1].astype(int)\n",
-    "#print(col0)\n",
-    "#print(col1)\n",
-    "\n",
-    "# print(np.max(col0))\n",
-    "# print(np.max(col1))\n",
-    "\n",
-    "# print(np.min(col0))\n",
-    "# print(np.min(col1))\n",
-    "\n",
-    "D = np.zeros((int(np.max(col0))+1, int(np.max(col1))+1),dtype=np.int8)\n",
-    "D[col0,col1] = 2\n",
-    "\n",
-    "# --- Fill between 2s (rows) ---\n",
-    "for r in range(D.shape[0]):\n",
-    "    cols = np.where(D[r] == 2)[0]\n",
-    "    if len(cols) >= 2:\n",
-    "        D[r, cols[0]:cols[-1]+1] = 1\n",
-    "        D[r, cols] = 2\n",
-    "\n",
-    "# --- Fill between 2s (columns) ---\n",
-    "for c in range(D.shape[1]):\n",
-    "    rows = np.where(D[:, c] == 2)[0]\n",
-    "    if len(rows) >= 2:\n",
-    "        D[rows[0]:rows[-1]+1, c] = 1\n",
-    "        D[rows, c] = 2\n",
-    "\n",
-    "# --- Fill between 1s (rows) ---\n",
-    "for r in range(D.shape[0]):\n",
-    "    cols = np.where(D[r] == 1)[0]\n",
-    "    if len(cols) >= 2:\n",
-    "        D[r, cols[0]:cols[-1]+1] = 1\n",
-    "\n",
-    "# --- Fill between 1s (columns) ---\n",
-    "for c in range(D.shape[1]):\n",
-    "    rows = np.where(D[:, c] == 1)[0]\n",
-    "    if len(rows) >= 2:\n",
-    "        D[rows[0]:rows[-1]+1, c] = 1\n",
-    "\n",
-    "print(D)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "82c05b85",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  0  9  0 11  0  0 11]\n"
-     ]
-    }
-   ],
-   "source": [
-    "points = np.column_stack((col0, col1))\n",
-    "num_points = len(points)\n",
-    "\n",
-    "best_score = np.zeros(num_points, dtype=int)\n",
-    "\n",
-    "for i in range(num_points):\n",
-    "    r1, c1 = points[i]\n",
-    "\n",
-    "    for j in range(i+1, num_points):\n",
-    "        r2, c2 = points[j]\n",
-    "\n",
-    "        # Check square condition\n",
-    "        if abs(r1 - r2) != abs(c1 - c2):\n",
-    "            continue\n",
-    "\n",
-    "        # Bounding box\n",
-    "        rmin, rmax = sorted([r1, r2])\n",
-    "        cmin, cmax = sorted([c1, c2])\n",
-    "\n",
-    "        square = D[rmin:rmax+1, cmin:cmax+1]\n",
-    "\n",
-    "        # Skip if any zero\n",
-    "        if np.any(square == 0):\n",
-    "            continue\n",
-    "\n",
-    "        # Score = ones inside + 2 for the corners\n",
-    "        ones_inside = np.sum(square == 1)\n",
-    "        score = ones_inside + 2\n",
-    "\n",
-    "        # Update best score for both points\n",
-    "        if score > best_score[i]:\n",
-    "            best_score[i] = score\n",
-    "        if score > best_score[j]:\n",
-    "            best_score[j] = score\n",
-    "\n",
-    "print(best_score)"
    ]
   },
   {
@@ -315,6 +188,101 @@
     "                maxArea = miijj\n",
     "            #print(f\"for L1 = {Loc1}, L2 = {Loc2}, area is {miijj}\")\n",
     "print(maxArea)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0f22da",
+   "metadata": {},
+   "source": [
+    "# La solucion de Daniel..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "25e05c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Points [87484, 81677] and [17819, 13493] give area 4750176210\n",
+      "Part 1: max area is 4750176210\n",
+      "Rectangle area 1574684850\n",
+      "Part 2: max rectangle area is 1574684850\n"
+     ]
+    }
+   ],
+   "source": [
+    "#%% Import data\n",
+    "with open(\"day9_tst.txt\") as file:\n",
+    "    corner_positions = file.read().strip().split(\"\\n\")\n",
+    "\n",
+    "corner_int_positions = [[int(number) for number in numbers.split(\",\")] for numbers in corner_positions if numbers.strip()]\n",
+    "# %% Part 1: Get biggest possible area\n",
+    "def largest_area(corners_positions: list) -> int:\n",
+    "    max_area = -1\n",
+    "    max_points = (None, None)\n",
+    "\n",
+    "    for p1, point1 in enumerate(corners_positions):\n",
+    "        for p2, point2 in enumerate(corners_positions[p1+1:], start=p1+1):\n",
+    "            x = abs(point1[0] - point2[0]) + 1\n",
+    "            y = abs(point1[1] - point2[1]) + 1\n",
+    "            area = x * y\n",
+    "\n",
+    "            if area > max_area:\n",
+    "                max_area = area\n",
+    "                max_points = (point1, point2)\n",
+    "    print(f\"Points {max_points[0]} and {max_points[1]} give area {max_area}\")\n",
+    "\n",
+    "    return max_area\n",
+    "\n",
+    "\n",
+    "max_area = largest_area(corner_int_positions)\n",
+    "print(f\"Part 1: max area is {max_area}\")\n",
+    "\n",
+    "# %%Part 2: Largest rectangle within corners\n",
+    "def largest_rectangle(corners_positions: list) -> int:\n",
+    "    c = [tuple(p) for p in corners_positions]\n",
+    "    n = len(c)\n",
+    "    \n",
+    "    # Calculate area between two corners\n",
+    "    def area(p1, p2):\n",
+    "        return (abs(p1[0] - p2[0]) + 1) * (abs(p1[1] - p2[1]) + 1)\n",
+    "    \n",
+    "    # Create edges between consecutive corners\n",
+    "    edges = []\n",
+    "    for i in range(n):\n",
+    "        p1 = c[i]\n",
+    "        p2 = c[(i + 1) % n]\n",
+    "        edges.append((min(p1, p2), max(p1, p2)))\n",
+    "    \n",
+    "    # Try all rectangle pairs, largest first\n",
+    "    rectangles = [(area(c[i], c[j]), c[i], c[j]) for i in range(n) for j in range(i + 1, n)]\n",
+    "    rectangles.sort(reverse=True)\n",
+    "    \n",
+    "    for rect_area, p1, p2 in rectangles:\n",
+    "        x1, x2 = sorted([p1[0], p2[0]])\n",
+    "        y1, y2 = sorted([p1[1], p2[1]])\n",
+    "        \n",
+    "        # Check if any edge cuts through rectangle interior\n",
+    "        cuts_through = False\n",
+    "        for (x3, y3), (x4, y4) in edges:\n",
+    "            # Edge cuts through if it overlaps the interior\n",
+    "            if x4 > x1 and x3 < x2 and y4 > y1 and y3 < y2:\n",
+    "                cuts_through = True\n",
+    "                break\n",
+    "        \n",
+    "        if not cuts_through:\n",
+    "            print(f\"Rectangle area {rect_area}\")\n",
+    "            return rect_area\n",
+    "    \n",
+    "    return 0\n",
+    "max_rectangle_area = largest_rectangle(corner_int_positions)\n",
+    "print(f\"Part 2: max rectangle area is {max_rectangle_area}\")\n",
+    "# %%"
    ]
   }
  ],
